apps/wiki/wiki/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiki
  namespace: wiki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wiki
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: wiki
    spec:
      containers:
        - name: wiki
          image: requarks/wiki:2.5.286
          ports:
            - containerPort: 3000
          startupProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            failureThreshold: 30
            periodSeconds: 5
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            failureThreshold: 2
            periodSeconds: 30
            timeoutSeconds: 5
          resources: {}
      restartPolicy: Always
      automountServiceAccountToken: false
