apps/wiki/wiki/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wiki
  namespace: wiki
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cf.containeroo.ch/content: ${BASE_DOMAIN}
    cf.containeroo.ch/type: CNAME
spec:
  ingressClassName: traefik
  rules:
    - host: wiki.${BASE_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wiki
                port:
                  number: 3000
